# FasterTransformer

./: CMakeLists.txt
examples/pytorch/starcoder/: star_coder_example.py
examples/pytorch/starcoder/utils/: star_coder.py  vocab.py
src/fastertransformer/kernels/: CMakeLists.txt  layernorm_kernels.cu  star_coder_kernels.cu  star_coder_kernels.h
src/fastertransformer/layers/: DenseWeight.h  FfnWeight.h
src/fastertransformer/layers/attention_layers/: AttentionWeight.h  CMakeLists.txt  StarCoderContextAttentionLayer.cc  StarCoderContextAttentionLayer.h  TensorParallelStarCoderContextAttentionLayer.cc  TensorParallelStarCoderContextAttentionLayer.h
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/multi_gpu_star_coder/: CMakeLists.txt  ParallelStarCoder.cc  ParallelStarCoder.h  ParallelStarCoderContextDecoder.cc  ParallelStarCoderContextDecoder.h  ParallelStarCoderDecoder.cc  ParallelStarCoderDecoder.h  ParallelStarCoderDecoderLayerWeight.cc  ParallelStarCoderDecoderLayerWeight.h  ParallelStarCoderWeight.cc  ParallelStarCoderWeight.h  star_coder_gemm.cc
src/fastertransformer/models/star_coder/: CMakeLists.txt  StarCoder.cc  StarCoder.h  StarCoderDecoderLayerWeight.cc  StarCoderDecoderLayerWeight.h  StarCoderDenseWeight.h  StarCoderWeight.cc  StarCoderWeight.h  star_coder_gemm.cc  star_coder_kernel.cu  star_coder_kernels.h  star_coder_utils.cu
src/fastertransformer/models/star_coder/flash_attention2/: flash_api.cpp
src/fastertransformer/models/star_coder/fused_multi_head_attention/: CMakeLists.txt  star_coder_flash_attention_kernel.cu
src/fastertransformer/th_op/: CMakeLists.txt
src/fastertransformer/th_op/star_coder/: CMakeLists.txt  StarCoderOp.cc  StarCoderOp.h
src/fastertransformer/triton_backend/: CMakeLists.txt
src/fastertransformer/utils/gemm_test/: CMakeLists.txt  star_coder_gemm_func.cc  star_coder_gemm_func.h
tests/: CMakeLists.txt
